; ModuleID = '/home/carl/AnghaBench/lab/engine/code/client/extr_cl_scrn.c_SCR_DrawBigString.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/client/extr_cl_scrn.c_SCR_DrawBigString.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BIGCHAR_WIDTH = common dso_local global i32 0, align 4
@qfalse = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SCR_DrawBigString(i32 %0, i32 %1, i8* %2, float %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca float, align 4
  %10 = alloca i32, align 4
  %11 = alloca [4 x float], align 16
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store float %3, float* %9, align 4
  store i32 %4, i32* %10, align 4
  %12 = getelementptr inbounds [4 x float], [4 x float]* %11, i64 0, i64 2
  store float 1.000000e+00, float* %12, align 8
  %13 = getelementptr inbounds [4 x float], [4 x float]* %11, i64 0, i64 1
  store float 1.000000e+00, float* %13, align 4
  %14 = getelementptr inbounds [4 x float], [4 x float]* %11, i64 0, i64 0
  store float 1.000000e+00, float* %14, align 16
  %15 = load float, float* %9, align 4
  %16 = getelementptr inbounds [4 x float], [4 x float]* %11, i64 0, i64 3
  store float %15, float* %16, align 4
  %17 = load i32, i32* %6, align 4
  %18 = load i32, i32* %7, align 4
  %19 = load i32, i32* @BIGCHAR_WIDTH, align 4
  %20 = load i8*, i8** %8, align 8
  %21 = getelementptr inbounds [4 x float], [4 x float]* %11, i64 0, i64 0
  %22 = load i32, i32* @qfalse, align 4
  %23 = load i32, i32* %10, align 4
  %24 = call i32 @SCR_DrawStringExt(i32 %17, i32 %18, i32 %19, i8* %20, float* %21, i32 %22, i32 %23)
  ret void
}

declare dso_local i32 @SCR_DrawStringExt(i32, i32, i32, i8*, float*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
